--- a/qurries.css
+++ b/qurries.css
@@ -9,6 +9,14 @@
       width: 100% !important;
       font-size: clamp(2rem, 4vw, 3.5rem) !important;
     }
+    .moto-body h2 {
+      margin: 10px 0;
+      font-size: clamp(2.1rem, 5vw,3.2rem);
+      color: var(--primary-color);
+      font-family: "h";
+      text-align: left;
+      font-weight: 600;
+  }
   }
 
   
@@ -16,16 +24,41 @@
     .footer .footer-paragraph {
       max-width: 500px !important;
     }
+    .moto-body h2 {
+      font-size: clamp(2.1rem, 4vw, 4.6rem) !important;
   }
+  }
+
+
+
+
   @media (max-width: 992px) {
     .moto-body {
-      align-items: center !important;
+      /* align-items: center !important; */
       padding-inline-start: 0px !important;
     }
+    /* .item-card h3 {left: 38px !important;} */
   
     .section-title {
       width: 36% !important;
     }
+    .toggle-btn{display: block !important;}
+
+
+    .moto-mbl{display: block !important;}
+    .item-card img {width: 86% !important;}
+    .owl-item{display: grid !important;place-items: center !important;}
+    #accept-id > div.col-lg-4.our-moto{display: none !important;}
+    .container-fluid.accept-section{flex-direction: column !important;}
+    .container-fluid.accept-section {
+      padding: 89px 20px !important;
+  }
+  .moto-body h2 {
+    font-size: clamp(3.1rem, 5vw, 5.6rem) !important;
+}
+  
+
+
   }
 
   
@@ -51,6 +84,9 @@
       justify-content: center !important;
       margin-top: 20px;
     }
+    /* .item-card h3 {left: 60px !important;position: absolute !important;top: -14px !important;} */
+    /* .item-card img {padding-top: 80px !important;} */
+
     .step-description {
       text-align: center !important;
     }
@@ -62,9 +98,18 @@
       justify-content: center !important;
       align-items: center !important;
     }
+    .item-card img {width: 86% !important;}
+.accept-section{flex-direction: column-reverse !important;}
+    .accept-container-1{display: block !important;}
+    .accept-container{display: none !important;}
+    body > footer.footer.container-fluid > div.container.footer-container > div > div:nth-child(1) > div > a > img{width: 11% !important;}
+    .navbar-brand img:nth-child(1) {height: 52px !important;}
   }
   @media (max-width: 768px) and (min-width: 575px) {
-    .nav-links{width: 17% !important;}
+    .owl-item{
+      padding-bottom: 50px !important;
+    }
+
 
   }
   @media (max-width: 575px) {
@@ -77,19 +122,29 @@
     .educate-points {
       padding-top: 145px !important;
     }
-    
-    .nav-links{width: 24% !important;}
+    .hero-subtitle {
+      font-size: clamp(1.6rem, 3vw, 2rem) !important;
+  
+  
+  }
+  .owl-theme .owl-dots, .owl-theme .owl-nav {
+    position: relative !important;
+    top: -4.5rem !important;
+}
+
   }
   @media (max-width: 575px) and (min-width: 475px) {
   }
   
   @media (max-width: 475px) {
+.hero-section{min-height: 100vh !important;}
+.toggle-btn{width: 26px !important;}
     .hero-title {
       font-size: 2rem !important;
       max-width: 450px !important;
-      line-height: 2.7rem !important;
+      line-height: 3rem !important;
       text-align: center !important;
-    }
+  }
     .hero-subtitle {
       text-align: center !important;
     }
@@ -100,7 +155,7 @@
       font-size: clamp(3.1rem, 5vw, 3.6rem);
     }
     .section-title h1 {
-      font-size: 1.8rem !important;
+      font-size: 1.6rem !important;
     }
     .section-title {
       height: 40px;
@@ -113,68 +168,202 @@
     .header-content {
       row-gap: 1.2rem !important;
     }
-    .toggle-btn {
-      width: 23px !important;
-    }
+    
+#hero-id > div.col-md-6.position-relative.hero-left > div.header-content.fade-right-animation.rounded-border > a{margin: auto !important;margin-top: 3rem !important;}
+
+.rounded-border{width: 90% !important;padding-block: 1rem !important;}
+.owl-item{
+  margin-bottom: 30px !important;
+}
+
   }
   @media (max-width: 475px) and (min-width: 320px) {
     .moto-body h2 {
-      font-size: clamp(2.9rem, 3vw, 3.6rem);
-    }
+      font-size: clamp(2.6rem, 3vw, 3.6rem) !important;
+  }
+  .owl-carousel .owl-nav {
+    display: flex !important;
+    justify-content: center;
+    position: relative !important;
+    top:-7.4rem !important;
+}
   }
   
-  @media (max-width: 768px) {
-    .nav-links {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 70%;
-      right: 0;
-      margin-top: 2rem;
-      width: 25%;
-    }
-  
-    .nav-links.active {
-      display: flex;
-    }
-  
-    .toggle-btn {
-      display: flex;
-      position: relative;
-      left: -3.3rem;
-    }
-  
-    .navbar-brand img:nth-child(1) {
-      width: 22% !important;
-    }
-    .navbar {
-      padding-inline: 1.4rem !important;
-    }
-  
-    .toggle-btn.active .bar:nth-child(1) {
-      transform: rotate(-143deg) translateY(-11px) !important;
-      left: revert-layer;
-      position: relative !important;
-      left: 4px !important;
-      top: -3px;
-    }
-    .toggle-btn.active .bar:nth-child(3) {
-      transform: rotate(-45deg) translateY(-14px) !important;
-      left: revert-layer;
-      position: relative !important;
-      left: 6px !important;
-      top: -4px;
-      bottom: 10px;
-    }
-  
-    .toggle-btn.active .bar:nth-child(2) {
-      opacity: 0;
-    }
-  
-    .toggle-btn.active .bar:nth-child(3) {
-      transform: rotate(-45deg) translateY(-8px);
-    }
-  }
+
   
   /*  */
+  .hero-id {position: relative;}
+
+ .rounded-border{display: none  !important;}
+  @media (max-width:992px) {
+    .rounded-border {
+      position: absolute !important;
+      display: block !important;
+      width: 100%;
+      padding-block: 6rem;  background: rgba(255, 255, 255, 0.479);
+      backdrop-filter: blur(0px) !important;
+      -webkit-backdrop-filter: blur(02px);
+      border: 1px solid rgb(255 255 255 / 64%);
+
+  }
+    .hero-right{display: none !important;}
+    .hero-left{width: 100% !important;}
+    .hero-section .col-md-6{width: 100% !important;}
+    .section-title {
+      font-size: 2.8rem;
+    }
+  
+    .blog-title {
+      font-size: 1.8rem;
+    }
+  
+    .blog-description {
+      font-size: 1.4rem;
+    }
+    /* #accept-id {
+      flex-direction: column-reverse !important;
+      justify-content: center !important;
+      align-items: center !important;
+    } */
+    /* #accept-id > .col-md-4 {
+      width: 100% !important;
+    } */
+
+    .moto-body {align-items: center !important;}
+
+    .item-card-wrapper {
+      width: 100% !important;
+      margin-bottom: 3rem !important;
+    }
+    .items-accepted-A,
+    .items-accepted-B {
+      gap: 3rem !important;
+    }
+    .our-moto {
+      margin-block: 3rem !important;
+      margin-block-end: 5rem !important;
+    }
+  
+  
+    
+ 
+  }
+  
+  
+  @media (max-width: 768px) {
+    .row {
+      flex-direction: column;
+    }
+  
+    .reward-text-body {
+      align-items: center;
+      text-align: center;
+    }
+  
+    .your-action {
+      margin-bottom: 20px;
+    }
+    .step-card {align-items: center !important;
+    }
+    .row{row-gap: 4rem !important;}
+    body > section.container-fluid.how-it-works-section > div.container.work-container > div.row.steps-row{row-gap: 0px !important;}
+
+  
+    .item-card-wrapper{width: 60% !important;}
+    .section-title {
+      font-size: 2.5rem;
+    }
+  
+    .blog-post {
+      margin-bottom: 20px;
+    }
+  
+    .blog-title {
+      font-size: 1.6rem;
+    }
+  
+    .blog-description {
+      font-size: 1.3rem;
+    }
+  
+    .owl-carousel .item {
+      padding: 0 10px;
+      display: grid;
+      place-items: center !important;
+
+    }
+    .owl-carousel .owl-item img{display: block !important; margin:auto !important;}
+    #desktop-screen {
+      display: none !important;
+    }
+    #mbl-screen {
+      display: block !important;
+    }
+    .footer .footer-paragraph {
+      font-size: 13px;
+      text-align: center !important;
+    }
+    .message-title {
+      font-size: 28px;
+    }
+    .container-fluid.accept-section{flex-direction: column-reverse !important;padding: 80px 34px !important;padding-block-end: 0px  !important;}
+    .message-text {
+      font-size: 16px;
+    }
+    .our-moto {
+      order: 3;
+      
+    }
+    .owl-carousel.owl-drag .owl-item{display: flex;justify-content: center ; align-items: center;}
+  
+    .items-accepted-A,
+    .items-accepted-B {
+      order: 1;
+      flex-direction: column !important;
+      row-gap: 2rem !important;
+    }
+    
+    .footer .footer-links {
+      text-align: center;
+    }
+  
+    .footer .footer-logo {
+      max-width: 120px; /* Adjust logo size for mobile */
+    }
+    .item-card {width: 80% !important;
+  }
+}
+  @media (max-width: 575px) {
+    #accept-id > .col-md-4 {
+      width: 100% !important;
+      flex-direction: column !important;
+    }
+    .item-card-wrapper{width: 80% !important;}
+    /* .item-card img {padding-top: 106px !important;} */
+    .item-card h3{
+      row-gap: 5rem !important;}
+      .item-card img{width: 100% !important;}
+      /* .item-card h3{width: 60px !important;height: 60px !important;left: 60px !important;} */
+      .item-card h3 {
+        margin-bottom: 10px;
+        font-size: 1.4rem;
+        color: var(--second-color);
+
+        padding: 06px 12px;
+        width: 100%;
+        height: 26px !important;
+        bottom: -54px !important;
+        border-radius: 11px !important;
+        /* left: 12px; */
+    }
+
+    }
+
+
+
+
+
+
+
+  
   
