--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
 }
 :root {
   --primary-color: #044146;
-  --second-color: #6a1e55;
+  --second-color: #09232b;
   --light-sky-blue: #d2effae6;
   --yellow: #fdda48;
   --accent: #4cce8d;
